# ds3patch

./: .gitignore  .gitmodules  Makefile  bootstrap.py  compile.py  requirements.txt
.github/workflows/: build.yml
src/event/: common_func.py  m36_00_00_00.py  m51_00_00_00.py  m51_01_00_00.py  m54_00_00_00.py
src/modengine_extension/: .clang-format  .gitignore  CMakeLists.txt  ds3_patch_extension.cpp  ds3_patch_extension.h  ds3_patch_script_api.cpp  ds3_patch_script_api.h  p2p_common.h  p2p_recv_worker.cpp  p2p_recv_worker.h  p2p_send_worker.cpp  p2p_send_worker.h  p2p_session_manager.cpp  p2p_session_manager.h  steam_bindings.cpp  steam_bindings.h
src/modengine_extension/scripts/: ds3patch_debug_display.lua
src/param/gameparam/: ActionButtonParam.csv  AiSoundParam.csv  AtkParam_Npc.csv  AtkParam_Pc.csv  AttackElementCorrectParam.csv  BehaviorParam.csv  BehaviorParam_PC.csv  BonfireWarpParam.csv  BudgetParam.csv  Bullet.csv  BulletCreateLimitParam.csv  CalcCorrectGraph.csv  Ceremony.csv  CharMakeMenuListItemParam.csv  CharMakeMenuTopParam.csv  CharaInitParam.csv  CharacterLoadParam.csv  ClearCountCorrectParam.csv  CoolTimeParam.csv  CultSettingParam.csv  DecalParam.csv  DirectionCameraParam.csv  EquipMtrlSetParam.csv  EquipParamAccessory.csv  EquipParamGoods.csv  EquipParamProtector.csv  EquipParamWeapon.csv  FaceGenParam.csv  FaceParam.csv  FaceRangeParam.csv  FootSfxParam.csv  GameAreaParam.csv  GemCategoryParam.csv  GemDropDopingParam.csv  GemDropModifyParam.csv  GemGenParam.csv  GemeffectParam.csv  HPEstusFlaskRecoveryParam.csv  HitEffectSeParam.csv  (+54 more)
